--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,16 +9,33 @@ on:
   workflow_dispatch:
 
 jobs:
-  upload:
+  generate:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Use node_modules cache
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            node_modules
+          key: yarn-${{ hashFiles('package.json') }}-${{ hashFiles('yarn.lock') }}
+
+      - name: yarn install
+        run: yarn install
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+
+      - name: build
+        run: |
+          yarn build
+
       - uses: actions/upload-pages-artifact@v1
         with:
           path: output/
+
   deploy:
     runs-on: ubuntu-latest
-    needs: upload
+    needs: generate
     permissions:
       pages: write
       id-token: write
