--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,11 +1,8 @@
-name: Deploy
+name: Generate and Deploy
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'output/**'
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
