--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-fix": "prettier --write .",
     "predeploy": "ts-node src/index.ts",
     "deploy": "gh-pages -d build",
+    "publish": "gh-pages -d ./public",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
