--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,9 +2,8 @@ name: Generate and Deploy
 
 on:
   push:
-    branches: [
-      'ci/**'
-    ]
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -24,12 +23,12 @@ jobs:
         run: yarn install
         if: steps.yarn-cache.outputs.cache-hit != 'true'
 
-      # - name: build
-      #   env:
-      #     COINMARKETCAP_API_KEY: ${{ secrets.COINMARKETCAP_API_KEY }}
-      #     RUNTIME_TARGET: ${{ inputs.target }}
-      #   run: |
-      #     yarn build
+      - name: build
+        env:
+          COINMARKETCAP_API_KEY: ${{ secrets.COINMARKETCAP_API_KEY }}
+          RUNTIME_TARGET: ${{ inputs.target }}
+        run: |
+          yarn build
 
       - name: Get Package Version
         id: package-version
