--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,8 @@
 name: Generate and Deploy
 
 on:
-  push:
-    branches: [
-      'ci/**'
-    ]
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
