--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,10 @@
 name: Generate and Deploy
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  push:
+    branches: [
+      'ci/**'
+    ]
   workflow_dispatch:
 
 jobs:
@@ -29,39 +31,39 @@ jobs:
         run: |
           yarn build
 
-      - name: Get Package Version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@master
+      # - name: Get Package Version
+      #   id: package-version
+      #   uses: martinbeentjes/npm-get-version-action@master
 
-      - name: Tag Package Version
-        run: git tag v${{ steps.package-version.outputs.current-version }}
+      # - name: Tag Package Version
+      #   run: git tag v${{ steps.package-version.outputs.current-version }}
 
-      - name: Create Release Package
-        uses: montudor/action-zip@v1
-        with:
-          args:
-            zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip
-            output
+      # - name: Create Release Package
+      #   uses: montudor/action-zip@v1
+      #   with:
+      #     args:
+      #       zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip
+      #       output
 
-      - name: Upload Latest Release
-        uses: actions/upload-artifact@v2
-        with:
-          name: v${{ steps.package-version.outputs.current-version }}.zip
-          path: v${{ steps.package-version.outputs.current-version }}.zip
+      # - name: Upload Latest Release
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: v${{ steps.package-version.outputs.current-version }}.zip
+      #     path: v${{ steps.package-version.outputs.current-version }}.zip
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
-        with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: v${{ steps.package-version.outputs.current-version }}.zip
-          asset_name: v${{ steps.package-version.outputs.current-version }}.zip
-          tag: v${{ steps.package-version.outputs.current-version }}
-          overwrite: true
+      # - name: Upload binaries to release
+      #   uses: svenstaro/upload-release-action@v2
+      #   with:
+      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+      #     file: v${{ steps.package-version.outputs.current-version }}.zip
+      #     asset_name: v${{ steps.package-version.outputs.current-version }}.zip
+      #     tag: v${{ steps.package-version.outputs.current-version }}
+      #     overwrite: true
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./output
-          keep_files: true
-          cname: dsearch.mask.r2d2.to
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./output
+      #     keep_files: true
+      #     cname: dsearch.mask.r2d2.to
