--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,25 +31,25 @@ jobs:
         run: |
           yarn build
 
-      # - name: Get Package Version
-      #   id: package-version
-      #   uses: martinbeentjes/npm-get-version-action@master
+      - name: Get Package Version
+        id: package-version
+        uses: martinbeentjes/npm-get-version-action@master
 
-      # - name: Tag Package Version
-      #   run: git tag v${{ steps.package-version.outputs.current-version }}
+      - name: Tag Package Version
+        run: git tag v${{ steps.package-version.outputs.current-version }}
 
-      # - name: Create Release Package
-      #   uses: montudor/action-zip@v1
-      #   with:
-      #     args:
-      #       zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip
-      #       output
+      - name: Create Release Package
+        uses: montudor/action-zip@v1
+        with:
+          args:
+            zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip
+            output
 
-      # - name: Upload Latest Release
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: v${{ steps.package-version.outputs.current-version }}.zip
-      #     path: v${{ steps.package-version.outputs.current-version }}.zip
+      - name: Upload Latest Release
+        uses: actions/upload-artifact@v2
+        with:
+          name: v${{ steps.package-version.outputs.current-version }}.zip
+          path: v${{ steps.package-version.outputs.current-version }}.zip
 
       # - name: Upload binaries to release
       #   uses: svenstaro/upload-release-action@v2
