--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,8 @@
 name: Generate and Deploy
 
 on:
-  push:
-    branches: [
-      'ci/**'
-    ]
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
@@ -51,19 +49,19 @@ jobs:
           name: v${{ steps.package-version.outputs.current-version }}.zip
           path: v${{ steps.package-version.outputs.current-version }}.zip
 
-      # - name: Upload binaries to release
-      #   uses: svenstaro/upload-release-action@v2
-      #   with:
-      #     repo_token: ${{ secrets.GITHUB_TOKEN }}
-      #     file: v${{ steps.package-version.outputs.current-version }}.zip
-      #     asset_name: v${{ steps.package-version.outputs.current-version }}.zip
-      #     tag: v${{ steps.package-version.outputs.current-version }}
-      #     overwrite: true
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: v${{ steps.package-version.outputs.current-version }}.zip
+          asset_name: v${{ steps.package-version.outputs.current-version }}.zip
+          tag: v${{ steps.package-version.outputs.current-version }}
+          overwrite: true
 
-      # - name: Deploy
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     github_token: ${{ secrets.GITHUB_TOKEN }}
-      #     publish_dir: ./output
-      #     keep_files: true
-      #     cname: dsearch.mask.r2d2.to
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./output
+          keep_files: true
+          cname: dsearch.mask.r2d2.to
