Revert "chore: trigger ci"
This reverts commit c215b235b84bc03c2a232af2473de173860b671c.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Generate and Deploy
 on:
   push:
     branches: [
-      'update-token-lists'
+      'update-specific-list'
     ]
   workflow_dispatch:
 
