--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,9 +1,8 @@
 name: Generate and Deploy
 
 on:
-  push:
-    on: 
-      - 'dao-space'
+  schedule:
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
