ci: bump actions/upload-artifact

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,12 +39,10 @@ jobs:
       - name: Create Release Package
         uses: montudor/action-zip@v1
         with:
-          args:
-            zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip
-            output
+          args: zip -qq -r v${{ steps.package-version.outputs.current-version }}.zip output
 
       - name: Upload Latest Release
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: v${{ steps.package-version.outputs.current-version }}.zip
           path: v${{ steps.package-version.outputs.current-version }}.zip
