--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2019",
     "module": "commonjs",
     "types": ["vitest/globals", "node"],
+    "lib": ["es2019"],
     "resolveJsonModule": true,
     "noEmit": true,
     "noImplicitAny": true,
